--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       var rightNow = moment();
       var diff = rightNow.diff(start,'days')
       //subtract one day since you haven't made it all the way.
-      $("#elapsedDays").html(diff-1 + " days");
+      $("#elapsedDays").html(diff-1 + " days Ryan");
       </script>
   </body>
 </html>
