--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class='jumbotron text-center'>
                 <h2>Hang in there. You've already made it:</h2>
                 <h1 id='elapsedDays'></h1>
+                <span class='glyphicon glyphicon-glass'></span>
 
             </div>
             
